# productivity-engine

./: README.md  pyproject.toml  quick run
examples/: demo.py  sample_dataset.csv
productivity_engine/: __init__.py  escalation.py  evaluator.py  explain.py  features.py  metrics.py  ml_pipeline.py  risk_model.py  scheduling.py  schema.py  simulation.py
productivity_engine/adapters/: __init__.py  csv_adapter.py  json_adapter.py
scripts/: run_benchmark.py
tests/: test_adapters.py  test_escalation.py  test_evaluator.py  test_ml_pipeline.py  test_risk.py  test_scheduling.py
ui_demo_streamlit/: README.md  app.py
