[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "productivity-engine"
version = "0.1.0"
description = "Modular behavioral compliance modeling framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
